# melody-forge

./: .gitignore  CLAUDE_TASK.md  CODEX_TASK.md  TASK_frontend_audio-fix.md  index.html  package-lock.json  package.json  start-melodyforge.sh
.agents/: agent-loop.sh
ai-service/: main.py  requirements-core.txt  requirements.txt
ai-service/database/: db.py  playlists.py  songs.py
ai-service/generators/: engine_manager.py  musicgen.py  suno.py
database/: init_db.py  melodyforge.db  schema.sql
docs/: plan.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AudioVisualizer.tsx  GenerationForm.tsx  LyricsDisplay.tsx  PlayerControls.tsx  ProgressBar.tsx  Sidebar.tsx  SongItem.tsx  SongList.tsx  VolumeControl.tsx
src/hooks/: useAudioPlayer.ts  useAudioVisualizer.ts
src/pages/: GeneratePage.tsx  HomePage.tsx  SettingsPage.tsx
src/services/: api.ts
src/stores/: useSettingsStore.ts  useSongStore.ts
src/types/: audio.ts
